--- a/index.1.html
+++ b/index.1.html
@@ -94,9 +94,45 @@
     <div class="container">
       <h1 class="display-3">Стоимость 14 тыс.</h1>
       <h1 class="display-4">При оплате до 20 ноября 12 тыс</h1>
+      <div class="row"></div>
+      <div class="row" text-center></div>
+
   </section>
 
   <!-- Оставить заявку -->
+  <section class="bg-light text-center">
+    <div class="container">
+      <div class="row">
+        <div class="col-12 col-md-6 align-self-center">
+          <form>
+            <div class="form-group">
+              <!-- <label for="exampleInputEmail1">Ваш Email или номер телефона</label> -->
+              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Ваш email или телефон">
+              <!-- <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
+            </div>
+            <div class="form-group">
+              <!-- <label for="exampleInputPassword1">ФИО</label> -->
+              <input type="name" class="form-control" id="exampleInputPassword1" placeholder="ФИО">
+            </div>
+            <button type="submit" class="btn btn-primary">Оставить заявку</button>
+          </form>
+        </div>
+        <div class="col-12 col-md-6  align-self-center">
+          <form>
+            <div class="form-group">
+              <!-- <label for="exampleInputEmail1">Ваш Email или номер телефона</label> -->
+              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Ваш номер телефона">
+            </div>
+            <button type="submit" class="btn btn-dark">Обратный звонок</button>
+          </form>
+        </div>
+      </div>
+    </div>
+
+  </section>
+
+
+  <!-- Image Showcases -->
   <section class="showcase">
     <div class="container-fluid p-0">
       <div class="row no-gutters">
@@ -131,157 +167,57 @@
           </form>
         </div>
       </div>
-
+      <div class="row no-gutters">
+        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/bg-showcase-3.jpg');"></div>
+        <div class="col-lg-6 order-lg-1 my-auto showcase-text">
+          <h2>Easy to Use &amp; Customize</h2>
+          <p class="lead mb-0">Landing Page is just HTML and CSS with a splash of SCSS for users who demand some deeper
+            customization options. Out of the box, just add your content and images, and your new landing page will be
+            ready to go!</p>
+        </div>
+      </div>
     </div>
   </section>
 
 
-  <!-- Легендарный -->
-  <section class=" bg-light text-center padding">
+
+
+
+
+  <!-- Icons Grid -->
+  <section class="features-icons bg-light text-center">
     <div class="container">
-      <p class="lead mb-1">
-        <h1 class="display-4">О тренинге, его создании и слушателях рассказывает автор методики Андрей Кениг</h1>
-      </p>
-      <br />
-
-      <div class="embed-responsive embed-responsive-16by9">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/JASQPFO0nzo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen></iframe>
-      </div>
-  </section>
-
-
-  <!-- Для кого -->
-  <section class=" bg-showcase-1 padding">
-    <div class="container">
-      <div class="text-center ">
-        <h1 class="display-4">Для кого?</h1>
-      </div>
-      <div>
-
-        <br />
-        <p>Вам к&nbsp;нам, если</p>
-        <p>—&nbsp;читаете уже везде, на&nbsp;кухне, в&nbsp;душе, в&nbsp;ванной, в&nbsp;самолёте
-          и&nbsp;т.д.&nbsp;и&nbsp;все
-          равно не&nbsp;успеваете следить за&nbsp;всеми трендами </p>
-        <p>—&nbsp;хочется выглядеть приличным человеком, обсуждать последние книжные новинки и&nbsp;поддержать беседу,
-          но&nbsp;принципиально не&nbsp;читаете (отбили желание с&nbsp;детства в&nbsp;школе) мы&nbsp;вернём вам
-          счастливое
-          детство/чтение</p>
-        <p>—&nbsp;вы&nbsp;студент (все вокруг гуляют ночами, а&nbsp;вы&nbsp;не&nbsp;успеваете к&nbsp;сессии
-          и&nbsp;сидите
-          ночами за&nbsp;книгами) Верните в&nbsp;своё расписание заслуженное время для личной жизни</p>
-        <p>—&nbsp;хотите открыть для себя новую 4Dреальность. Дёшево и&nbsp;полезно для здоровья J&nbsp;Кинотеатр
-          у&nbsp;вас
-          в&nbsp;голове по&nbsp;цене бумажной книги</p>
-        <p>—&nbsp;закрыв книгу вы&nbsp;понимаете, что пока читали всё время думали о&nbsp;своём и&nbsp;ничего
-          не&nbsp;запомнили. Приходится постоянно перечитывать?</p>
-      </div>
-  </section>
-
-  <!-- Результаты -->
-  <section class=" bg-light padding">
-    <div class="container">
-      <div class="text-center ">
-        <h1 class="display-4">Результаты</h1>
-      </div>
-      <div>
-        <p>По&nbsp;результатам тренинга</p>
-        <p>1) За&nbsp;2&nbsp;дня скорость возрастёт в&nbsp;<nobr>2-3</nobr> раза (1500&nbsp;— 6&nbsp;000 знаков
-          в&nbsp;минуту)</p>
-        <p>2) У&nbsp;вас появится (или усилится) желание читать</p>
-        <p>3) Перестанете отвлекаться во&nbsp;время чтения</p>
-        <p>4) Вы&nbsp;сможете лучше понимать текст (на&nbsp;<nobr>80-100%</nobr> при скорочтении, в&nbsp;сравнении
-          с&nbsp;<nobr>40-60%</nobr>
-          при обычном чтении)</p>
-        <p>5) Появится свобода выбора: как читать&nbsp;— старой стратегией медленного чтения или принципиально новой
-          в&nbsp;зависимости от&nbsp;целей чтения и&nbsp;вида литературы</p>
-        <p>6) Узнаете и&nbsp;освоите инструменты, с&nbsp;помощью которых сможете ещё увеличить свою скорость
-          в&nbsp;дальнейшем</p>
-        <p>Преимущества нашей методики</p>
-        <p>1) Экспресс-метод за&nbsp;2&nbsp;дня благодаря инструментам НЛП. Быстрое чтение БЫСТРО!</p>
-        <p>2) Авторская методика с&nbsp;реальных людей, развивших в&nbsp;себе этот навык</p>
-        <p>3) Лучшие практики на&nbsp;базе исследовательской мастерской. Многолетний опыт .... и&nbsp;отобраны только
-          реально
-          работающие упражнения</p>
-        <p>4) Сам тренинг максимально кайфовый по&nbsp;настроению и&nbsp;атмосфере, наполнению фото/видео/музыка.</p>
-        <p>5) Работа не&nbsp;только с&nbsp;мозгом, но&nbsp;и&nbsp;с&nbsp;эмоциями и&nbsp;с&nbsp;телом&nbsp;— целостный
-          процесс</p>
-        <p>6) Побочные эффекты: развитие памяти и&nbsp;воображения</p>
-        <p>7) Посттренинговое сопровождение</p>
-      </div>
-
-  </section>
-
-
-
-
-  <!-- 5 Зачем ? -->
-  <section class="features-icons bg-showcase-1 text-center">
-    <div class="container">
-      <h1 class="display-4">Зачем?</h1>
-      <br /><br />
       <div class="row">
         <div class="col-lg-4">
           <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
             <div class="features-icons-icon d-flex">
-              <i class="fas fa-kiss-beam m-auto text-primary"></i>
+              <i class="icon-screen-desktop m-auto text-primary"></i>
             </div>
-            <h3>Удовольствие!</h3>
-            <p class="lead mb-0">Получать удовольствие от чтения</p>
+            <h3>Fully Responsive</h3>
+            <p class="lead mb-0">This theme will look great on any device, no matter the size!</p>
           </div>
         </div>
         <div class="col-lg-4">
           <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
             <div class="features-icons-icon d-flex">
-              <i class="fas fa-piggy-bank m-auto text-primary"></i>
+              <i class="icon-layers m-auto text-primary"></i>
             </div>
-            <h3>Время!</h3>
-            <p class="lead mb-0">Экономить время</p>
+            <h3>Bootstrap 4 Ready</h3>
+            <p class="lead mb-0">Featuring the latest build of the new Bootstrap 4 framework!</p>
           </div>
         </div>
         <div class="col-lg-4">
           <div class="features-icons-item mx-auto mb-0 mb-lg-3">
             <div class="features-icons-icon d-flex">
-              <i class="fas fa-brain m-auto text-primary"></i>
+              <i class="icon-check m-auto text-primary"></i>
             </div>
-            <h3>Понимание!</h3>
-            <p class="lead mb-0">Улучшить понимание и запоминание информации</p>
+            <h3>Easy to Use</h3>
+            <p class="lead mb-0">Ready to use with your own content, or customize the source files!</p>
           </div>
         </div>
       </div>
     </div>
   </section>
-
-
-
-
-
-
-  <!-- 6 Программа тренинга -->
-  <section class=" bg-showcase-1 text-center padding">
-    <div class="container">
-      <div>
-        <h1 class="display-4">
-        </h1>
-      </div>
-      <br />
-
-      <div>
-
-      </div>
-  </section>
-
-
-
-
-
-
-
-
-
-
-
 
   <!-- Image Showcases -->
   <section class="showcase">
