finish last razdel

--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
   <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet" type="text/css">
   <!-- <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css"> -->
-  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300i,400,400i,700,700i&amp;subset=cyrillic"
-    rel="stylesheet">
+  <!-- <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300i,400,400i,700,700i&amp;subset=cyrillic" rel="stylesheet"> -->
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:300,300i,400,400i,700,700i" rel="stylesheet">
 
   <!-- Custom styles for this template -->
   <link href="css/landing-page.min.css" rel="stylesheet">
 
   <!-- gallery js -->
-  <script src="js/gallery.js"></script>
+  <!-- <script src="js/gallery.js"></script> -->
 
 </head>
 
@@ -405,112 +405,148 @@
   <!-- 7 Фото -->
   <section class="photo-carousel">
     <div class="container">
-      <div class="row blog">
-        <div class="col-md-12">
-          <div id="blogCarousel" class="carousel slide" data-ride="carousel">
 
-            <ol class="carousel-indicators">
-              <li data-target="#blogCarousel" data-slide-to="0" class="active"></li>
-              <li data-target="#blogCarousel" data-slide-to="1"></li>
-            </ol>
+      <!-- <h1 class="my-4 text-center text-lg-left">Thumbnail Gallery</h1> -->
 
-            <!-- Carousel items -->
-            <div class="carousel-inner">
+      <div class="row text-center text-lg-left">
+        <div class="col-lg-3 col-md-4 col-xs-6">
+          <a href="#" class="d-block mb-4 h-100">
+            <img class="img-fluid img-thumbnail" src="http://placehold.it/400x300" alt="">
+          </a>
+        </div>
+        <div class="col-lg-3 col-md-4 col-xs-6">
+          <a href="#" class="d-block mb-4 h-100">
+            <img class="img-fluid img-thumbnail" src="http://placehold.it/400x300" alt="">
+          </a>
+        </div>
+        <div class="col-lg-3 col-md-4 col-xs-6">
+          <a href="#" class="d-block mb-4 h-100">
+            <img class="img-fluid img-thumbnail" src="http://placehold.it/400x300" alt="">
+          </a>
+        </div>
+        <div class="col-lg-3 col-md-4 col-xs-6">
+          <a href="#" class="d-block mb-4 h-100">
+            <img class="img-fluid img-thumbnail" src="http://placehold.it/400x300" alt="">
+          </a>
+        </div>
+      </div>
 
-              <div class="carousel-item active">
-                <div class="row">
-                  <div class="col-md-3">
-                    <a href="#">
-                      <img src="http://placehold.it/250x250" alt="Image" style="max-width:100%;">
-                    </a>
-                  </div>
-                  <div class="col-md-3">
-                    <a href="#">
-                      <img src="http://placehold.it/250x250" alt="Image" style="max-width:100%;">
-                    </a>
-                  </div>
-                  <div class="col-md-3">
-                    <a href="#">
-                      <img src="http://placehold.it/250x250" alt="Image" style="max-width:100%;">
-                    </a>
-                  </div>
-                  <div class="col-md-3">
-                    <a href="#">
-                      <img src="http://placehold.it/250x250" alt="Image" style="max-width:100%;">
-                    </a>
-                  </div>
-                </div>
-                <!--.row-->
-              </div>
-              <!--.item-->
+    </div>
+    <!-- /.container -->
+  </section>
 
-              <div class="carousel-item">
-                <div class="row">
-                  <div class="col-md-3">
-                    <a href="#">
-                      <img src="http://placehold.it/250x250" alt="Image" style="max-width:100%;">
-                    </a>
-                  </div>
-                  <div class="col-md-3">
-                    <a href="#">
-                      <img src="http://placehold.it/250x250" alt="Image" style="max-width:100%;">
-                    </a>
-                  </div>
-                  <div class="col-md-3">
-                    <a href="#">
-                      <img src="http://placehold.it/250x250" alt="Image" style="max-width:100%;">
-                    </a>
-                  </div>
-                  <div class="col-md-3">
-                    <a href="#">
-                      <img src="http://placehold.it/250x250" alt="Image" style="max-width:100%;">
-                    </a>
-                  </div>
-                </div>
-                <!--.row-->
-              </div>
-              <!--.item-->
 
-            </div>
-            <!--.carousel-inner-->
-          </div>
-          <!--.Carousel-->
 
+
+  <!-- 8 о тренере -->
+  <section class="bg-light padding">
+    <div class="container">
+      <div class="text-center ">
+        <h1 class="display-4">О тренере</h1><br />
+      </div>
+      <div>
+
+        <p>Татьяна Карпицкая, тренер НЛП, бизнес-тренер, бизнес- консультант, по&nbsp;первому образованию закончила
+          аспирантуру по&nbsp;специальности филология <em>подробнее о&nbsp;достижениях...</em></p>
+        <p>(это видная часть сразу, ниже&nbsp;то, что выпадает при открытии блока)</p>
+        <p>Татьяна Карпицкая&nbsp;— тренер НЛП, бизнес-тренер, бизнес-консультант. По&nbsp;первому образованию учитель
+          русского языка и&nbsp;литературы, закончила аспирантуру по&nbsp;специальности филология, имеет ряд научных
+          публикаций по&nbsp;инструментам воздействия художественного текста на&nbsp;восприятие, психику.</p>
+        <p>Тренер курса «Скорочтение» с&nbsp;2014&nbsp;года. За&nbsp;это время обучила несколько сотен учеников
+          в&nbsp;различных регионах России (Москва, Краснодар, Красноярск, Уфа, Санкт-Петербург)</p>
+        <p>Создатель <nobr>4-х</nobr> авторских концептов курса НЛП-практик: «Жизнь в&nbsp;удовольствие», «НЛП
+          в&nbsp;бизнесе», «НЛП для&nbsp;hr», «MyWay» а&nbsp;также других тренингов личностного роста и&nbsp;развития
+          сверхспособностей («Мозг на&nbsp;100%», «Кто ясно мыслит, тот ясно излагает», «Нлп на&nbsp;грани
+          и&nbsp;за&nbsp;гранью»).</p>
+        <p>С&nbsp;2006 по&nbsp;2013 год сделала успешную карьеру в&nbsp;бизнесе, собственник бизнесов в&nbsp;нескольких
+          отраслях.</p>
+      </div>
+    </div>
+    <br /><br />
+    <div class="container">
+      <!-- <h1 class="my-4 text-center text-lg-left">Thumbnail Gallery</h1> -->
+
+      <div class="row text-center text-lg-left">
+        <div class="col-lg-3 col-md-4 col-xs-6">
+          <a href="#" class="d-block mb-4 h-100">
+            <img class="img-fluid img-thumbnail" src="http://placehold.it/400x300" alt="">
+          </a>
+        </div>
+        <div class="col-lg-3 col-md-4 col-xs-6">
+          <a href="#" class="d-block mb-4 h-100">
+            <img class="img-fluid img-thumbnail" src="http://placehold.it/400x300" alt="">
+          </a>
+        </div>
+        <div class="col-lg-3 col-md-4 col-xs-6">
+          <a href="#" class="d-block mb-4 h-100">
+            <img class="img-fluid img-thumbnail" src="http://placehold.it/400x300" alt="">
+          </a>
+        </div>
+        <div class="col-lg-3 col-md-4 col-xs-6">
+          <a href="#" class="d-block mb-4 h-100">
+            <img class="img-fluid img-thumbnail" src="http://placehold.it/400x300" alt="">
+          </a>
         </div>
       </div>
     </div>
+    <!-- /.container -->
   </section>
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-  <!-- Легендарный -->
-  <section class=" bg-dark text-center padding">
+  <!-- 8 Отзывы -->
+  <section class=" bg-showcase-1 padding">
     <div class="container">
-      <br />
-    </div>
+      <div class="text-center ">
+        <h1 class="display-4">Отзывы</h1><br />
+      </div>
+      <div>
+        Лента видео
+      </div>
   </section>
+
+
+
+
+
+
+
+  <!-- 8 Контакты организаторов -->
+  <section class=" bg-light padding">
+    <div class="container">
+      <div class="text-center ">
+        <h1 class="display-4">Контакты организаторов</h1><br />
+      </div>
+      <div>
+        <p>Москва</p>
+        <p>Тел +7 977 990 5640 (Сергей / Ирина)</p>
+        <p>Красноярск</p>
+        <p>WatsApp +7 913 837 6167 (Татьяна)</p>
+        <p>Краснодар</p>
+        <p>WatsApp +7 918 318 8335 (Татьяна)</p>
+        <p>Санкт-Петербург</p>
+        <p>WatsApp +7 931 320 9606 (Анна)</p>
+        <p>Расписание открытых тренингов на 2019 год мы опубликуем в декабре 2019, </p>
+        <p>по вопросам проведения тренинга в корпоративном формате обращайтесь к организаторам</p>
+      </div>
+  </section>
+
+
+
+
+
+
+
+
+
+
 
 
 
 
 
   <!-- Image Showcases -->
-  <section class="showcase">
+  <!-- <section class="showcase">
     <div class="container-fluid p-0">
       <div class="row no-gutters">
 
@@ -539,7 +575,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <!-- Testimonials -->
   <section class="testimonials text-center bg-light">
@@ -572,22 +608,23 @@
     </div>
   </section>
 
+
   <!-- Call to Action -->
   <section class="call-to-action text-white text-center">
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
         <div class="col-xl-9 mx-auto">
-          <h2 class="mb-4">Ready to get started? Sign up now!</h2>
+          <h2 class="mb-4">Готовы начать? Запишитесь прямо сейчас!</h2>
         </div>
         <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
           <form>
             <div class="form-row">
               <div class="col-12 col-md-9 mb-2 mb-md-0">
-                <input type="email" class="form-control form-control-lg" placeholder="Enter your email...">
+                <input type="email" class="form-control form-control-lg" placeholder="Введите свой Email">
               </div>
               <div class="col-12 col-md-3">
-                <button type="submit" class="btn btn-block btn-lg btn-primary">Sign up!</button>
+                <button type="submit" class="btn btn-block btn-lg btn-primary">Записаться!</button>
               </div>
             </div>
           </form>
@@ -595,6 +632,7 @@
       </div>
     </div>
   </section>
+
 
   <!-- Footer -->
   <footer class="footer bg-light">
@@ -623,11 +661,16 @@
         <div class="col-lg-6 h-100 text-center text-lg-right my-auto">
           <ul class="list-inline mb-0">
             <li class="list-inline-item mr-3">
-              <a href="#">
+              <a href="https://www.facebook.com/skorochtenienlp/">
                 <i class="fab fa-facebook fa-2x fa-fw"></i>
               </a>
             </li>
             <li class="list-inline-item mr-3">
+              <a href="https://www.facebook.com/groups/1659819887600428/">
+                <i class="fab fa-facebook fa-2x fa-fw"></i>
+              </a>
+            </li>
+            <!-- <li class="list-inline-item mr-3">
               <a href="#">
                 <i class="fab fa-twitter-square fa-2x fa-fw"></i>
               </a>
@@ -636,7 +679,7 @@
               <a href="#">
                 <i class="fab fa-instagram fa-2x fa-fw"></i>
               </a>
-            </li>
+            </li> -->
           </ul>
         </div>
       </div>
