--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
-        <div class="col-xl-9 mx-auto">
-          <h1 class="mb-5">Тренинг <br />"Скорочтение экспресс-методом"</h1>
-          <h1 class="mb-5">8-9 декабря, Москва</h1>
-
+        <div class="col-xl-12 mx-auto">
+          <h1 class="display-1" style="font-weight: 600; font-size:3.4rem; padding-bottom: 30px ">Тренинг <br />"Скорочтение
+            экспресс-методом"</h1>
+          <h1 class="display-4" style="font-weight: 300; font-size:3.4rem">8-9 декабря, Москва</h1>
         </div>
         <!-- <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
             <form>
